hotel-helm/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hotel-svc
  #namespace: hotel
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: hotel
