hotel-helm/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hotel-ingress
  #namespace: hotel
spec:
  rules:
  - host: hotel.example.com 
    http:
      paths:
      - path: /
        backend:
          serviceName: hotel-svc
          servicePort: 80
